fix: Nav menu visibility on Place to Stay page

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -34,6 +34,7 @@
     display: none;
   }
   .links__div.active {
+    z-index: 999;
     box-sizing: border-box;
     position: absolute;
     top: 6rem;
